@@ -14,6 +14,7 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.CorsUtils;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import lombok.RequiredArgsConstructor;
@@ -23,7 +24,8 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-	public static final String FRONT_ORIGIN = "http://localhost:3000";
+	public static final String HEAD = "HEAD";
+	public static final String OPTIONS = "OPTIONS";
 	private final JwtTokenProvider jwtTokenProvider;
 	public static final String ALLOW_PATTERN = "*";
 	public static final String POST = "POST";
@@ -60,7 +62,7 @@ public class SecurityConfig {
 		httpSecurity.httpBasic()
 			.disable() // rest api 이기 때문에 기본 설정을 사용하지 않는다. (기본설정은 비인증시 로그인 화면으로 리다이렉트)
 			.cors()
-			.configurationSource(corsConfigurationSource())
+			//			.configurationSource(corsConfigurationSource())
 			.and()
 			.csrf()
 			.disable() // rest api 이기 때문에 csrf 보안이 필요 없으므로 disable 처리한다.
@@ -70,9 +72,10 @@ public class SecurityConfig {
 			.authorizeRequests() // HttpServletRequest를 사용하는 요청에 대한 권한체크
 			.antMatchers(PERMIT_URL_ARRAY)// 가입 및 로그인주소는 모두 접근 가능.
 			.permitAll() // 위에서 지정한 인증없이 권한 허가.
-			//			.authorizeRequests()
-			//			.requestMatchers(CorsUtils::isPreFlightRequest)
-			//			.permitAll()
+			.and()
+			.authorizeRequests()
+			.requestMatchers(CorsUtils::isPreFlightRequest)
+			.permitAll()
 			.anyRequest() // 나머지 요청은
 			.hasRole(ROLE_USER) // 인증된 회원만 접근가능.
 			.and()
@@ -91,10 +94,11 @@ public class SecurityConfig {
 	public CorsConfigurationSource corsConfigurationSource() {
 		final CorsConfiguration corsConfiguration = new CorsConfiguration();
 
-		corsConfiguration.setAllowedOrigins(List.of(FRONT_ORIGIN));
-		corsConfiguration.setAllowedMethods(Arrays.asList(POST, GET, DELETE, PUT));
+		corsConfiguration.setAllowedOrigins(
+			List.of("http://localhost:8080", "http://localhost:3000", "https://j8a602.p.ssafy.io"));
+		corsConfiguration.setAllowedMethods(Arrays.asList(POST, GET, DELETE, PUT, HEAD, OPTIONS));
 		corsConfiguration.setAllowedHeaders(List.of(ALLOW_PATTERN));
-		corsConfiguration.setAllowCredentials(true);
+		//		corsConfiguration.setAllowCredentials(true);
 
 		final UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
 		urlBasedCorsConfigurationSource.registerCorsConfiguration(BASE_URL_PATTERN, corsConfiguration);
